[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/textures/ui/bg.png" type="Texture" id=1]
[ext_resource path="res://game/screens/tutorial/Tutorial.gd" type="Script" id=2]
[ext_resource path="res://game/ui/TextBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/ui/Next.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/ui/Previous.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/ui/Skip.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/textures/TutorialMaster.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]

resource_name = "idle"
length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 2 ]
}

[sub_resource type="Animation" id=2]

length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 1, 2, 0, 2, 1, 2 ]
}

[node name="Tutorial" type="TextureRect" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 1 )
stretch_mode = 0
script = ExtResource( 2 )
next_tutorial = null
previous_tutorial = null

[node name="TextBox" parent="." index="0" instance=ExtResource( 3 )]
margin_top = 166.0
margin_right = 144.0
margin_bottom = 256.0
text = ""

[node name="Next" parent="TextBox" index="2" instance=ExtResource( 4 )]
margin_left = 110.0
margin_top = 56.0
margin_right = 135.0
margin_bottom = 81.0

[node name="Previous" parent="TextBox" index="3" instance=ExtResource( 5 )]
margin_left = 9.0
margin_top = 56.0
margin_right = 34.0
margin_bottom = 81.0

[node name="Skip" parent="." index="1" instance=ExtResource( 6 )]
margin_left = 110.0
margin_top = 9.0
margin_right = 135.0
margin_bottom = 34.0

[node name="Waffle先生" type="Sprite" parent="." index="2"]
editor/display_folded = true
position = Vector2( 72, 76 )
texture = ExtResource( 7 )
vframes = 2
hframes = 2
frame = 2
_sections_unfolded = [ "Animation", "Region", "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Waffle先生" index="0"]
root_node = NodePath("..")
autoplay = "talk"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/idle = SubResource( 1 )
anims/talk = SubResource( 2 )
next/talk = "idle"
blend_times = [  ]

[node name="Sprites" type="Control" parent="." index="3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
blend_times = [  ]

[connection signal="pressed" from="TextBox/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="TextBox/Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="Skip" to="." method="_on_Skip_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_started"]
